fixed overflow and .picture img size

--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -2,6 +2,7 @@ body{
 	margin: 0;
 	padding: 0;
 	font-family: 'Spline Sans', serif;
+	overflow: hidden visible;
 }
 
 nav{
@@ -31,11 +32,14 @@ h2{
 	text-align: center;
 }
 
-img {
+.picture img {
 	/* So that no image is overflown */
-	width: 100%;
+	max-width: 100%;
 }
 
+img{
+	max-width: 100%;
+}
 .description{
 	margin-top: 1rem
 }
@@ -57,7 +61,6 @@ img {
 
 .picture img{
 	width: 300px;
-	height: 300px;
 	border-radius: 50%;
 }
 
@@ -104,9 +107,13 @@ img {
 }
 
 @media (max-width: 950px){
-	.pictures{
-		width: 50%;
-		margin: 2rem auto;
+
+	.picture{
+		width: 100%;
+	}
+
+	.pictures img{
+		margin: 0 100%;
 	}
 	.skill img, .contact img{
 		width: 100px;
